# tree-sitter-freebasic

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-c.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_freebasic/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFreebasic/: freebasic.h
bindings/swift/TreeSitterFreebasicTests/: TreeSitterCTests.swift
examples/: factorial.bas  hello.bas  loops.bas  subroutine.bas
src/: grammar.json  node-types.json
test/corpus/: functions.txt  loops.txt  statements.txt
