[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-freebasic"
description = "FreeBasic grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "freebasic"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]
authors = [
  {name = "Raffaele", email = "raffaelemeo77@gmail.com"}
]
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
Homepage = "https://github.com/raffaele/tree-sitter-freebasic"

[project.optional-dependencies]
core = ["tree-sitter~=0.20"]
